# libsodium

./: CInstallLists.txt  CMakeLists.txt  CTestLists.txt  README.markdown
src/libsodium/crypto_core/ed25519/ref10/: ed25519_ref10.c
src/libsodium/crypto_core/ed25519/ref10/fe_25_5/: fe.h
src/libsodium/crypto_generichash/blake2b/ref/: blake2b-ref.c
src/libsodium/crypto_stream/salsa20/ref/: salsa20_ref.c  salsa20_ref.h
test/: CPU_UNALIGNED_ACCESS.c  HAVE_AMD64_ASM.c  HAVE_ATOMIC_OPS.c  HAVE_AVX2INTRIN_MM256.c  HAVE_AVX512FINTRIN.c  HAVE_AVXINTRIN.c  HAVE_AVX_ASM.c  HAVE_AVX_ASM_V.c  HAVE_CPUID.c  HAVE_EMMINTRIN.c  HAVE_HIDDEN.c  HAVE_INLINE_ASM.c  HAVE_MMINTRIN.c  HAVE_PMMINTRIN.c  HAVE_PRIVATE_EXTERN.c  HAVE_RDRAND.c  HAVE_SMMINTRIN.c  HAVE_TI_MODE.c  HAVE_TMMINTRIN.c  HAVE_WEAK_SYMBOLS.c  HAVE_WMMINTRIN.c  HAVE_XGETBV.c  IS_STDC_LIMIT_MACROS_NEEDED.c
test/default/: CMakeLists.txt
